rtsp-media: Only signal "new-state" if the state has actually changed

https://bugzilla.gnome.org/show_bug.cgi?id=774173